# poseidon

./: .gitignore  Cargo.toml  Dockerfile  README.md  bench-comparison.md  convert_to_json.py  generate_parameters.py
benches/: domain_overhead.rs  merkle_binary.rs  rate_thresholds.rs  simple_hash.rs  simple_hash_poseidon2.rs  simple_hash_poseidon2_bn254.rs
benches/aztec/: Cargo.toml
benches/aztec/benches/: poseidon2.rs
benches/o1labs/: Cargo.toml
benches/o1labs/benches/: poseidon_kimchi.rs
examples/: basic_usage.rs  clean_field_api.rs  error_demo.rs  generic_hasher.rs  multi_curve.rs  primitive_types.rs
old_code/: main.rs  poseidon_params.rs
scripts/: README.md  compare_benches.py  convert_params.py  docker-compose.yml  generate_parameters.py  generate_params_poseidon.sage.py
src/: ark_poseidon.rs  grain_lfsr.rs  hasher.rs  lib.rs  poseidon2.rs  primitive.rs  tags.rs  types.rs
src/parameters/: bls12_377.rs  bls12_381.rs  bn254.rs  mod.rs  pallas.rs  poseidon2.rs  poseidon2_bn254.rs  poseidon2_pallas.rs  poseidon2_pallas_hl.rs  vesta.rs
tests/: all_curves_primitives.rs  collision_prevention_tests.rs  determinism_tests.rs  domain_separation_tests.rs  fuzzing_tests.rs  input_validation_tests.rs  memory_security_tests.rs  primitive_types.rs  security_tests.rs  side_channel_tests.rs  tags_additional_tests.rs
tests/resources/: hl_pallas.rc3.txt
