[package]
name = "poseidon-hash"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "Production-ready, type-safe Poseidon hash implementation with comprehensive error handling and multi-curve support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/poseidon-hash"
keywords = ["poseidon", "hash", "cryptography", "zk-snark", "elliptic-curves"]
categories = ["cryptography", "algorithms"]

[lib]
name = "poseidon_hash"

[dependencies]
# ark core
ark-ff  = { version = "0.5", features = ["asm", "parallel"] }
ark-ec  = { version = "0.5", features = ["parallel"] }

# curves (TODO: make them optional)
ark-bn254     = { version = "0.5" }
ark-bls12-381 = { version = "0.5" }
ark-bls12-377 = { version = "0.5" }
ark-pallas    = { version = "0.5" }
ark-vesta     = { version = "0.5" }

# sponge
ark-crypto-primitives = { version = "0.5", features = ["sponge", "parallel"] }

# misc
num-bigint = "0.4"
lazy_static = "1.4"
thiserror = "1.0"
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }

[dev-dependencies]

[[example]]
name = "basic_usage"

[[example]]
name = "multi_curve"

[[example]]
name = "primitive_types"

[[example]]
name = "clean_field_api"
